--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contos">Contos</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">Sobre</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contato">Contato</a></li>
                     </ul>
                 </div>
             </div>
@@ -47,13 +48,14 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Histórias de Família</p>
+                <p class="masthead-subheading font-weight-light mb-0">SOBRE</p>
                 <br>
-                <p>Neste site temos alguns contos de família para te mostrar!</p>
+                <p class="textsobre">Os Eventuais Contos é um trabalho que foi feito com a finalidade de mostrar histórias familiares.</p>
+                <p class="textsobre">Os contos consistem em histórias de gêneros diversos como: suspense, romance, terror, drama, ação e aventura</p>
             </div>
         </header>
         <!-- Portfolio Section-->
-        <section class="page-section portfolio" id="portfolio">
+        <section id="contos" class="page-section portfolio" id="portfolio">
             <div class="container">
                 <!-- Portfolio Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contos</h2>
@@ -145,10 +147,10 @@
             <div class="container">
                 <div class="row">
                     <!-- Footer Location-->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Alterar</h4>
+                    <div id="contato" class="col-lg-4 mb-5 mb-lg-0">
+                        <h4 class="text-uppercase mb-4">Contato</h4>
                         <p class="lead mb-0">
-                            Alterar
+                            nada :)
                             <br/>
                         </p>
                     </div>
