--- a/index.html
+++ b/index.html
@@ -405,17 +405,46 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Controller</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">O sonho de um garoto</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/game.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="p-cap">Essa pequena história começa com um garoto que tem um sonho de
+                                        se tornar um artista profissional, ele morava numa cidade pequena, não era
+                                        rico, mas isso não tirava o sonho de se tornar o que tanto queria.</p>
+                                    <p class="p-nocap">Todo dia ele ia a escola, todo dia treinava, era visto como qualquer
+                                        outro, não demonstrava talento. Mas ele era especial, não se importava com
+                                        o que diziam, não se queixava de ser péssimo (pensava que era), não
+                                        esperava pela motivação ou inspiração.</p>
+                                    <p class="p-nocap">— Cara, seus desenhos são péssimos. — Disse um outro garoto na
+                                        sala de aula.</p>
+                                    <p class="p-nocap">— Mas, mas seu não treinar, como vou melhorar?</p>
+                                    <p class="p-nocap">— Quem é bom no desenho nasce com o dom! — Respondeu o
+                                        zombador.</p>
+                                    <p class="p-nocap">Esse é o tipo de coisa que se ouve várias vezes na vida, que pessoas
+                                        te dizem ao tentar fazer algo de diferente; realmente não sabem o que
+                                        dizem.</p>
+                                    <p class="p-nocap">O garoto aceitou pagar por tudo que iria passar para alcançar seu
+                                        sonho. Toda noite, assistia a vídeos e mais vídeos de speed drawing, os
+                                        olhos brilhavam, era precisamente isso que apetecia.</p>
+                                    <p class="p-nocap">Até que um dia ele teve um sonho, onde tudo era tão belo, esbelto.
+                                        Ele se via com dois pincéis, um em cada mão, algo tão surreal. Ele pintava
+                                        uma moça, mas não conseguia ver o rosto, estava borrado, inacabado.</p>
+                                    <p class="p-nocap">Continuou a observar o local, a pintura. Aproximou-se e tocou o
+                                        quadro, era feito de madeira (pelo menos é o que parecia), mas tinha uma
+                                        textura diferente, uma madeira pegajosa, algo como cola. Ele então
+                                        levantou um dos pincéis e esforçou-se para pintar qualquer coisa que viesse
+                                        na mente, e o quadro começou a se desfazer.</p>
+                                    <p class="p-nocap">Depois daquele momento, ele acordou; olhando ao redor viu que
+                                        estava sentado em sua cama com dois pincéis na mão, pintando o ar.</p>
+                                    <p class="p-nocap">Esse sonho foi bem estranho, quis compartilhar com você. Isso
+                                        aconteceu com uma pessoa que conheci a muito tempo, e, infelizmente não
+                                        tenho mais contato com ela.</p>
+                                    <p class="p-nocap" style="text-indent: 0; text-align: center;"><b>— Yuri Candido da Silva</b></p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Fechar Conto
