--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/ghost.png" alt="Uma história com fantasmas!" />
+                            <img class="img-fluid" src="assets/img/portfolio/ghost.svg" alt="Uma história com fantasmas!" />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -100,7 +100,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/game.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/board.png" alt="História sobre um sonho de um garoto." />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
