Adição de +2 contos

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contos">Contos</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">Sobre</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#sobre">Sobre</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contato">Contato</a></li>
                     </ul>
                 </div>
@@ -125,7 +125,7 @@
             </div>
         </section>
         <!-- About Section-->
-        <section class="page-section bg-primary text-white mb-0" id="about">
+        <section class="page-section bg-primary text-white mb-0" id="sobre">
             <div class="container">
                 <!-- About Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-white">Sobre</h2>
@@ -137,8 +137,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">Alterar</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">Alterar</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">LOIS</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">LOIS</p></div>
                 </div>
             </div>
         </section>
@@ -341,7 +341,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tasty Cake</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">O casal predestinado</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -351,7 +351,51 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="p-cap">Uma história que conta sobre um casal reunidos pelo destino... o ano
+                                        era 1972, nascia em um pequeno município na Bahia uma menina de
+                                        família humilde com o nome de Maria, desde cedo começou a trabalhar na
+                                        roça e desenvolveu amor pelo trabalho agrônomo e obteve o sonho de
+                                        querer se formar em agronomia, mas por ser um município muito pequeno
+                                        e a falta de dinheiro o sonho não foi possível de se tornar realidade.</p>
+                                    <p class="p-nocap">Com 20 anos, ela trabalhava de empregada doméstica para uma
+                                        mulher, e essa mulher viria para São Paulo, ela veio junto com a família
+                                        para Penápolis, depois foi chamada para morar com amigas de sua cidade
+                                        natal que morava em Mauá.</p>
+                                    <p class="p-nocap">O outro lado da história se iniciava em 1965, no mesmo município
+                                        nascia um garoto de nome Geraldo, esse garoto também trabalhou na roça
+                                        desde cedo, mas aos 14 anos pegou um ônibus e foi direto a Santo André
+                                        morar com seus irmãos que já estavam aqui. Sem se conhecerem
+                                        pessoalmente, o máximo era um “conhece a Maria de Crispin”, “já ouvi
+                                        falar”, a cidade era muito pequena então todos sabiam um do outro, mesmo
+                                        sem se conhecerem.</p>
+                                    <p class="p-nocap">Voltando a história da mulher, as amigas da cidade natal dela eram
+                                        por coincidência primas do rapaz. E então em uma reunião de família eles
+                                        acabaram se conhecendo, uma das primas apresentaram um para o outro, e
+                                        então o rapaz perguntou o seguinte.</p>
+                                    <p class="p-nocap">— Oi, de onde você veio, está gostando daqui de São Paulo?</p>
+                                    <p class="p-nocap">— Olá, eu sou lá de Chorrochó e eu estou gostando da cidade, é
+                                        incrível, mas e você? — disse ela</p>
+                                    <p class="p-nocap">— Chorrochó? Não acredito, eu também sou de lá, quem é seu pai?
+                                        (Como a cidade era pequena, somente perguntando quem era o pai você já
+                                        descobria quem era).</p>
+                                    <p class="p-nocap">— Sim! Eu sou Maria Helena, filha de Crispin e você?</p>
+                                    <p class="p-nocap">— Filha de Crispin? Entendi, sou Geraldo de Bilão, ou Rau de Bilão.</p>
+                                    <p class="p-nocap">— Aaata, Bilão, conheço ele, curioso né? Nunca tínhamos nos vistos lá.</p>
+                                    <p class="p-nocap">— Então hahaha, gostaria de sair qualquer dia desses?</p>
+                                    <p class="p-nocap">— Claro, por que não?</p>
+                                    <p class="p-nocap">E depois dessa conversa, eles saíram algumas vezes, e se
+                                        apaixonaram, em 1993 alugaram uma casa em Mauá e começaram a morar
+                                        juntos, e no mesmo ano souberam de um presente, o primeiro filho que
+                                        viria a nascer em fevereiro de 1994, uma filha de nome Mayara, em 1995
+                                        compraram um terreno em Ribeirão e fizeram sua casa própria.</p>
+                                    <p class="p-nocap">Após 10 anos, outro grato presente, um outro filho de nome Luís
+                                        Otávio, mais conhecido como o narrador desta história, o casal se conheceu
+                                        em 1991 e até hoje perduram com 27 anos de casados.</p>
+                                    <p class="p-nocap">Uma história muito curiosa, nasceram na mesma cidadezinha na
+                                        Bahia, mas por ventura do destino vieram se conhecer em São Paulo e
+                                        criarem a sua família, podemos dizer que eles eram um casal predestinado.</p>
+                                    <p class="p-nocap">Essa é a história de como minha mãe e meu pai se conheceram.</p>
+                                    <p class="p-nocap" style="text-indent: 0; text-align: center;"><b>— Luís Otávio Nascimento Reis</b></p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Fechar Conto
@@ -466,7 +510,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Locked Safe</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Um dente no Magic City</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -476,7 +520,55 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/safe.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="p-cap">Essa é história seu apresenta a vocês um dos melhores dias da minha
+                                        vida...</p>
+                                    <p class="p-nocap">O ano era 2016, o mês era novembro e a data dia 7, ou então, meu
+                                        aniversário, eu estava fazendo 11 anos naquele dia, então nós já tínhamos
+                                        combinado de ir no Magic City e fiquei muito feliz, seria minha primeira
+                                        vez em lugar como aquele.</p>
+                                    <p class="p-nocap">Tinham dois primos meus que estavam indo junto com minha família
+                                        e a gente ia “quebrar” tudo e eu dizia:</p>
+                                    <p class="p-nocap">— A gente que ir em todos os tobogãs, em tudo ok?</p>
+                                    <p class="p-nocap">— — É claro que a gente vai em todos, vai ser muito daora! — dizia
+                                        Matheus.</p>
+                                    <p class="p-nocap">— Tu é doido é? Vai ser muito massa doido – dizia com Gustavo
+                                        com seu sotaque arrastado da Bahia.</p>
+                                    <p class="p-nocap">Depois de aproximadamente uma hora finalmente chegamos no
+                                        nosso destino, o Magic City estava ali, na nossa frente, nosso único pensamento era tirar a roupa de cima e ir em todos os tobogãs e aproveitar
+                                        o máximo que pudesse.</p>
+                                    <p class="p-nocap">Fomos indo em tudo, era muito incrível tudo aquilo, parecia que
+                                        estávamos no paraíso, a gente descia os três ao mesmo tempo e disputava
+                                        quem era primeiro (Matheus sempre ganhava), ia dois no mesmo tobogã na
+                                        mesma pista sendo que nem podia. Até que em uma dessas aconteceu algo,
+                                        em uma dessas eu e o Gustavo estávamos disputando, porque o Matheus
+                                        tinha ficado para trás na fila, então eu desço o tobogã e perco, levanto
+                                        minha cabeça para cima e olho para o lado e o Matheus está com sangue
+                                        pelo pescoço inteiro.</p>
+                                    <p class="p-nocap">— Matheus cê’ tá sangrando? – Eu disse.</p>
+                                    <p class="p-nocap">— Eu não tô não, sai fora. — Ele retrucou.</p>
+                                    <p class="p-nocap">E o Gustavo confirmou</p>
+                                    <p class="p-nocap">— Matheus você tá sangrando sim.</p>
+                                    <p class="p-nocap">A gente correu até a mesa que minha mãe estava e ela entrou em
+                                        desespero, com razão, fomos correndo para o carro para levar para um
+                                        hospital e no caminho eu perguntei para o Matheus o que tinha acontecido.</p>
+                                    <p class="p-nocap">— Cara o que aconteceu?</p>
+                                    <p class="p-nocap">— Eu bati no dente de uma menina, mas achei que não tinha
+                                        acontecido nada.</p>
+                                    <p class="p-nocap">— Em um dente??? O dente da menina saiu do lugar depois disso se
+                                        loco.</p>
+                                    <p class="p-nocap">E a gente começou a rir, detalhe ele não estava sentindo dor nem
+                                        nada, só o sangue mesmo, chegando ao hospital e minha mãe foi levar para
+                                        ver se tinha de dar pontos, chegando lá descobrimos que ele abriu um buraco na cabeça de aproximadamente 7cm e teria que colocar 8 pontos.
+                                        Ele colocou os pontos lá, terminando já era quase de noite, então a viagem
+                                        foi “cancelada” e todo mundo voltou para casa, a mãe dele não estava
+                                        conosco e foi ver como ele estava e depois foi embora.
+                                        </p>
+                                    <p class="p-nocap">No começo eu confesso que foi um pouco apavorante, mas tudo
+                                        correu bem, tenho dó da menina que ele bateu o dente deve ter doído.
+                                        Moral da história: Nunca bata a cabeça em um dente, pode machucar e
+                                        acabar com uma memória que deveria ser boa.</p>
+                                    <p class="p-nocap">Essa é uma história convivida por mim.</p>
+                                    <p class="p-nocap" style="text-indent: 0; text-align: center;"><b>— Luís Otávio Nascimento Reis</b></p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Fechar Conto
