--- a/index.html
+++ b/index.html
@@ -136,10 +136,82 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- About Section Content-->
-                <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">LOIS</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">LOIS</p></div>
-                </div>
+                <section id="team" class="section-bg">
+                    <div class="container" data-aos="fade-up">
+                      <div class="section-header">
+                        <h3 class="section-title">Sobre nós</h3>
+                        <span class="section-divider"></span>
+                        <p class="section-description">Sessão falando os criadores desse projeto :)</p>
+                    </div>
+                    <div class="section section-our-team-freebie">
+                        <div class="parallax filter filter-color-black">
+                            <div class="image" style="background-image:url('assets/img/header-2.jpeg')">
+                            </div>
+                            <div class="container">
+                                <div class="content">
+                                    <div class="row">
+                                        <div class="title-area">
+                                            <h2>Who We Are</h2>
+                                            <div class="separator separator-danger">✻</div>
+                                            <p class="description">We promise you a new look and more importantly, a new attitude. We build that by getting to know you, your needs and creating the best looking clothes.</p>
+                                        </div>
+                                    </div>
+                
+                                    <div class="team">
+                                        <div class="row">
+                                            <div class="col-md-10 col-md-offset-1">
+                                                <div class="row">
+                                                    <div class="col-md-4">
+                                                        <div class="card card-member">
+                                                            <div class="content">
+                                                                <div class="avatar avatar-danger">
+                                                                    <img alt="..." class="img-circle" width="325px" src=""/>
+                                                                </div>
+                                                                <div class="description">
+                                                                    <h3 class="title">Fantasma Lindão</h3>
+                                                                    <p class="small-text">CEO / Co-Founder</p>
+                                                                    <p class="description">euso o pai</p>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-4">
+                                                        <div class="card card-member">
+                                                            <div class="content">
+                                                                <div class="avatar avatar-danger">
+                                                                    <img alt="..." class="img-circle" width="325px" src=""/>
+                                                                </div>
+                                                                <div class="description">
+                                                                    <h3 class="title">Fantasma Filho</h3>
+                                                                    <p class="small-text">Product Designer</p>
+                                                                    <p class="description">euso o fi</p>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-4">
+                                                        <div class="card card-member">
+                                                            <div class="content">
+                                                                <div class="avatar avatar-danger">
+                                                                    <img alt="..." class="img-circle" width="325px" src=""/>
+                                                                </div>
+                                                                <div class="description">
+                                                                    <h3 class="title">Fantasma Neto</h3>
+                                                                    <p class="small-text">Marketing Hacker</p>
+                                                                    <p class="description">euso o neto</p>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </section>
         <!-- Footer-->
