--- a/index.html
+++ b/index.html
@@ -423,16 +423,16 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="p-cap">Uma história que conta sobre um casal reunidos pelo destino... o ano
+                                    <p class="p-cap">Uma história que conta sobre um casal reunido pelo destino... o ano
                                         era 1972, nascia em um pequeno município na Bahia uma menina de
                                         família humilde com o nome de Maria, desde cedo começou a trabalhar na
                                         roça e desenvolveu amor pelo trabalho agrônomo e obteve o sonho de
                                         querer se formar em agronomia, mas por ser um município muito pequeno
-                                        e a falta de dinheiro o sonho não foi possível de se tornar realidade.</p>
+                                        e a falta de dinheiro, o sonho não foi possível de se tornar realidade.</p>
                                     <p class="p-nocap">Com 20 anos, ela trabalhava de empregada doméstica para uma
                                         mulher, e essa mulher viria para São Paulo, ela veio junto com a família
                                         para Penápolis, depois foi chamada para morar com amigas de sua cidade
-                                        natal que morava em Mauá.</p>
+                                        natal que moravam em Mauá.</p>
                                     <p class="p-nocap">O outro lado da história se iniciava em 1965, no mesmo município
                                         nascia um garoto de nome Geraldo, esse garoto também trabalhou na roça
                                         desde cedo, mas aos 14 anos pegou um ônibus e foi direto a Santo André
@@ -440,9 +440,9 @@
                                         pessoalmente, o máximo era um “conhece a Maria de Crispin”, “já ouvi
                                         falar”, a cidade era muito pequena então todos sabiam um do outro, mesmo
                                         sem se conhecerem.</p>
-                                    <p class="p-nocap">Voltando a história da mulher, as amigas da cidade natal dela eram
-                                        por coincidência primas do rapaz. E então em uma reunião de família eles
-                                        acabaram se conhecendo, uma das primas apresentaram um para o outro, e
+                                    <p class="p-nocap">Voltando à história da mulher, as amigas da cidade natal dela eram
+                                        por coincidência, primas do rapaz. E então em uma reunião de família eles
+                                        acabaram se conhecendo, uma das primas apresentou um para o outro, e
                                         então o rapaz perguntou o seguinte.</p>
                                     <p class="p-nocap">— Oi, de onde você veio, está gostando daqui de São Paulo?</p>
                                     <p class="p-nocap">— Olá, eu sou lá de Chorrochó e eu estou gostando da cidade, é
@@ -590,20 +590,20 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/safe.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/tooth.svg" alt="História sobre um dente." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="p-cap">Essa é história seu apresenta a vocês um dos melhores dias da minha
                                         vida...</p>
-                                    <p class="p-nocap">O ano era 2016, o mês era novembro e a data dia 7, ou então, meu
+                                    <p class="p-nocap">O ano era 2016, dia 7 de novembro, ou então, meu
                                         aniversário, eu estava fazendo 11 anos naquele dia, então nós já tínhamos
                                         combinado de ir no Magic City e fiquei muito feliz, seria minha primeira
                                         vez em lugar como aquele.</p>
                                     <p class="p-nocap">Tinham dois primos meus que estavam indo junto com minha família
                                         e a gente ia “quebrar” tudo e eu dizia:</p>
                                     <p class="p-nocap">— A gente que ir em todos os tobogãs, em tudo ok?</p>
-                                    <p class="p-nocap">— — É claro que a gente vai em todos, vai ser muito daora! — dizia
+                                    <p class="p-nocap">— É claro que a gente vai em todos, vai ser muito daora! — dizia
                                         Matheus.</p>
-                                    <p class="p-nocap">— Tu é doido é? Vai ser muito massa doido – dizia com Gustavo
+                                    <p class="p-nocap">— Tu é doido é? Vai ser muito massa doido – dizia Gustavo
                                         com seu sotaque arrastado da Bahia.</p>
                                     <p class="p-nocap">Depois de aproximadamente uma hora finalmente chegamos no
                                         nosso destino, o Magic City estava ali, na nossa frente, nosso único pensamento era tirar a roupa de cima e ir em todos os tobogãs e aproveitar
@@ -626,7 +626,7 @@
                                     <p class="p-nocap">— Cara o que aconteceu?</p>
                                     <p class="p-nocap">— Eu bati no dente de uma menina, mas achei que não tinha
                                         acontecido nada.</p>
-                                    <p class="p-nocap">— Em um dente??? O dente da menina saiu do lugar depois disso se
+                                    <p class="p-nocap">— Em um dente??? O dente da menina saiu do lugar depois disso sé
                                         loco.</p>
                                     <p class="p-nocap">E a gente começou a rir, detalhe ele não estava sentindo dor nem
                                         nada, só o sangue mesmo, chegando ao hospital e minha mãe foi levar para
