--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/safe.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/tooth.svg" alt="Uma história sobre um dente." />
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
@@ -589,8 +589,6 @@
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/tooth.svg" alt="História sobre um dente." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="p-cap">Essa é história seu apresenta a vocês um dos melhores dias da minha
                                         vida...</p>
