Ajuste na parte de sobre o projeto

--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">SOBRE</p>
+                <p class="masthead-subheading font-weight-light mb-0">Sobre o projeto</p>
                 <br>
-                <p class="textsobre">Os Eventuais Contos é um trabalho que foi feito com a finalidade de mostrar histórias familiares.</p>
+                <p class="textsobre">Os Eventuais Contos é um projeto que foi feito com a finalidade de mostrar memórias familiares.</p>
                 <p class="textsobre">Os contos consistem em histórias de gêneros diversos como: suspense, romance, terror, drama, ação e aventura</p>
+                <p class="textsobre">Foi muito legal trabalhar com esse projeto, conhecer outras memórias familiares e também trabalhar com duas matérias.</p>
             </div>
         </header>
         <!-- Portfolio Section-->
