Ajuste na parte Sobre o projeto

--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">Sobre o projeto</p>
                 <br>
-                <p class="textsobre">Os Eventuais Contos é um projeto que foi feito com a finalidade de mostrar memórias familiares.</p>
-                <p class="textsobre">Os contos consistem em histórias de gêneros diversos como: suspense, romance, terror, drama, ação e aventura</p>
-                <p class="textsobre">Foi muito legal trabalhar com esse projeto, conhecer outras memórias familiares e também trabalhar com duas matérias.</p>
+                <p class="textsobre">O projeto 'Eventuais Contos' foi um projeto realizado com as professoras Bárbara e Cíntia, sua finalidade foi compartilhar memórias familiares.</p>
+                <p class="textsobre">Os contos consistem em histórias de gêneros diversos como: suspense, romance, terror, drama, ação e aventura.</p>
+                <p class="textsobre">Foi muito bom trabalhar com duas matérias, além de conseguir conhecer outros contos.</p>
+                <p class="textsobre">Então aproveitem o site e curtam os contos!</p>
             </div>
         </header>
         <!-- Portfolio Section-->
