Ícones das redes sociais

--- a/index.html
+++ b/index.html
@@ -190,10 +190,9 @@
                             <h4>Luís Reis</h4>
                             <span>Chief Executive Officer</span>
                             <div class="social">
-                              <a href=""><i class="bi bi-twitter"></i></a>
-                              <a href=""><i class="bi bi-facebook"></i></a>
-                              <a href="https://www.instagram.com/reisluisz/"><i class="bi bi-instagram"></i></a>
-                              <a href=""><i class="bi bi-linkedin"></i></a>
+                              <a href="https://www.instagram.com/reisluisz/"><i class="fab fa-instagram"></i></a>
+                              <a href="https://github.com/luisnreis"><i class="fab fa-github"></i></a>
+                              <a href="wa.me/5511945030407"><i class="fab fa-whatsapp"></i></a>
                             </div>
                           </div>
                         </div>
@@ -204,10 +203,8 @@
                             <h4>Rafael Lima</h4>
                             <span>Product Manager</span>
                             <div class="social">
-                              <a href=""><i class="bi bi-twitter"></i></a>
-                              <a href=""><i class="bi bi-facebook"></i></a>
-                              <a href=""><i class="bi bi-instagram"></i></a>
-                              <a href=""><i class="bi bi-linkedin"></i></a>
+                              <a href=""><i class="fab fa-github"></i></a>
+                              <a href="wa.me/5511979859117"><i class="fab fa-whatsapp"></i></a>
                             </div>
                           </div>
                         </div>
@@ -218,10 +215,8 @@
                             <h4>Yuri Candido</h4>
                             <span>Accountant</span>
                             <div class="social">
-                              <a href=""><i class="bi bi-twitter"></i></a>
-                              <a href=""><i class="bi bi-facebook"></i></a>
-                              <a href="https://www.instagram.com/reisluisz/"><i class="bi bi-instagram"></i></a>
-                              <a href=""><i class="bi bi-linkedin"></i></a>
+                              <a href="https://github.com/projects-yuri"><i class="fab fa-github"></i></a>
+                              <a href="wa.me/5511996338103"><i class="fab fa-whatsapp"></i></a>
                             </div>
                           </div>
                         </div>
@@ -280,7 +275,7 @@
                                     <div class="text-center mb-3">
                                         <div class="fw-bolder">Form submission successful!</div>
                                         To activate this form, sign up at
-                                        <br />
+                                        <br/>
                                         <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
                                     </div>
                                 </div>
